style: new name adjustments
